# docs/swagger.json
@@ -17,25 +17,57 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/product/{name}/{stock}": {
-            "get": {
-                "tags": [
-                    "Product"
+        "/product/category/add": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
                 ],
-                "summary": "Get Items Info",
+                "description": "add category",
+                "tags": [
+                    "Category"
+                ],
+                "summary": "add category",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "product name",
-                        "name": "name",
-                        "in": "path",
-                        "required": true
+                        "description": "prev - cur",
+                        "name": "Cate",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/product.Category"
+                        }
                     },
                     {
                         "type": "string",
-                        "description": "product stock",
-                        "name": "stock",
-                        "in": "path",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/product/category/refresh": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "remake category_map in server",
+                "tags": [
+                    "Category"
+                ],
+                "summary": "refresh category",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
                         "required": true
                     }
                 ],
@@ -52,47 +84,6 @@
                     "Test"
                 ],
                 "summary": "Test List",
-                "responses": {}
-            }
-        },
-        "/test1": {
-            "get": {
-                "description": "Test get list",
-                "tags": [
-                    "Test"
-                ],
-                "summary": "Test List",
-                "responses": {}
-            }
-        },
-        "/user/info/{id}": {
-            "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "Get User Info from DB",
-                "tags": [
-                    "User"
-                ],
-                "summary": "Get User Info",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "User id",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Authorization",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
                 "responses": {}
             }
         },
@@ -133,6 +124,37 @@
                         "schema": {
                             "$ref": "#/definitions/user.User"
                         }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/user/{id}/info": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get User Info from DB",
+                "tags": [
+                    "User"
+                ],
+                "summary": "Get User Info",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {}
@@ -179,9 +201,44 @@
                 ],
                 "responses": {}
             }
+        },
+        "/vender/{id}/info": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "get vender info",
+                "tags": [
+                    "Vender"
+                ],
+                "summary": "get\tvender info",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
         }
     },
     "definitions": {
+        "product.Category": {
+            "type": "object",
+            "properties": {
+                "current cate": {
+                    "type": "string"
+                },
+                "previous cate": {
+                    "type": "string"
+                }
+            }
+        },
         "user.User": {
             "type": "object",
             "properties": {
