# route/vender/vender.go
@@ -1,6 +1,8 @@
 package vender
 
 import (
+	"fmt"
+
 	"github.com/gofiber/fiber/v2"
 	"github.com/yusong-offx/myshoppingmall/utils"
 	"golang.org/x/crypto/bcrypt"
@@ -16,14 +18,38 @@ type Vender struct {
 	Url          string `json:"url"`
 }
 
-// func VenderGet(c *fiber.Ctx) error {
-// 	rows, err := database.DB.Query("SELECT * FROM venders where id = $1", c.Params())
-// 	c.Qu
-// }
+type VenderInfo struct {
+	Id           string `json:"id"`
+	Name         string `json:"name"`
+	Addr         string `json:"addr"`
+	Phone_number string `json:"phone_number"`
+	Email        string `json:"email"`
+	Url          string `json:"url"`
+}
 
-// func VenderPost(c *fiber.Ctx) error {
-// 	err := database.DB.Query("INSERT INTO venders VALUES ($1, $2, $3, $4, $5, $6)")
-// }
+// @Tags		Vender
+// @Summary get	vender info
+// @Description	get vender info
+// @Parmas		ID
+// @Router		/vender/{id}/info [get]
+// @Security	ApiKeyAuth
+// @param		Authorization header string true "Authorization"
+func VenderGet(c *fiber.Ctx) error {
+	rows, err := utils.DB.Query("SELECT id, name, addr, phone_number, email, url FROM venders WHERE id = $1", c.Params("id"))
+	if err != nil {
+		return utils.ErrorReqeustJSON(err, 500, c)
+	}
+	ret := VenderInfo{}
+	if rows.Next() {
+		err = rows.Scan(&ret.Id, &ret.Name, &ret.Addr, &ret.Phone_number, &ret.Email, &ret.Url)
+		if err != nil {
+			return utils.ErrorReqeustJSON(err, 500, c)
+		}
+	} else {
+		return utils.ErrorReqeustJSON(fmt.Errorf("no user (id : %s)", c.Params("id")), 403, c)
+	}
+	return c.Status(200).JSON(ret)
+}
 
 // @Tags		Vender
 // @Summary 	vender sign up
@@ -48,7 +74,11 @@ func VenderSignUp(c *fiber.Ctx) error {
 	rows, err := utils.DB.Query(
 		"INSERT INTO venders VALUES ($1, $2, $3, $4, $5, $6)",
 		vender.Id, vender.Name, pwdHash, vender.Addr, vender.Phone_number, vender.Email)
-	return utils.DBPost(rows, err, c)
+	return utils.DBPost(utils.SqlFuncArgs{
+		Rows: rows,
+		Err:  err,
+		Ctx:  c,
+	})
 }
 
 // @Tags         Vender
@@ -59,4 +89,13 @@ func VenderSignUp(c *fiber.Ctx) error {
 // @Router       /vender/login [post]
 func VenderLogin(c *fiber.Ctx) error {
 	return utils.Login("venders", c)
+}
+
+func UserDelete(c *fiber.Ctx) error {
+	if err := utils.DBDelete(utils.SqlFuncArgs{
+		Args: []string{"venders", "id", c.Params("id")},
+	}); err != nil {
+		return utils.ErrorReqeustJSON(err, 500, c)
+	}
+	return c.Status(fiber.StatusOK).Redirect("/clearcookies")
 }
